# image-translate-backend

./: .dockerignore  .env.example  .gitignore  API_DOC.md  CLAUDE.md  README.md  RUN_GUIDE.md  ideal.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: monitoring.py  routes.py  translation.py
app/core/: config.py  genai_client_manager.py  logging.py  redis_client.py
app/middleware/: error_handler.py  file_validation.py  logging.py  rate_limiting.py  request_id.py  security_headers.py  timeout.py
app/models/: schemas.py
app/services/: gemini_service.py  key_rotation.py  prompt_manager.py  task_manager.py  worker_pool.py
config/: api_keys.json.example  api_keys.yaml  api_keys.yaml.example  gunicorn.conf.py  prompts.yaml
docker/: Dockerfile  Dockerfile.prod  docker-compose.yml
improvements/: multiple-images-plan.md
nginx/: nginx.conf
nginx/sites-available/: image-translation-backend
